# f-garimpo

./: .gitignore  README.md  pyproject.toml  requirements.txt
samples/: create_samples.py
src/garimpo/: __init__.py  cli.py  config.py  hashing.py  logging_config.py  recovery.py  reports.py  scanner.py  signatures.py  utils.py  validators.py
src/garimpo/plugins/: __init__.py  bmp.py  gif.py  jpeg.py  mp4.py  pdf.py  png.py  text.py  zip_based.py
src/garimpo/webapp/: __init__.py  app.py
src/garimpo/webapp/static/: app.js  styles.css
src/garimpo/webapp/templates/: base.html  index.html  session.html
tests/: conftest.py  test_config.py  test_hashing.py  test_recovery.py  test_reports.py  test_scanner.py  test_signatures.py  test_utils.py  test_webapp.py
